Плюшки ботам, пвп разпределение